CHG: add clearable property for data/time/month/select input

--- a/demo/project.config.json
+++ b/demo/project.config.json
@@ -13,5 +13,7 @@
 	"appid": "touristappid",
 	"projectname": "vest-form-demo",
 	"miniprogramRoot": "dist/",
+	"simulatorType": "wechat",
+	"simulatorPluginLibVersion": {},
 	"condition": {}
 }
